Fix facebook button misalignment issue

--- a/scss/partials/_hero.scss
+++ b/scss/partials/_hero.scss
@@ -63,6 +63,9 @@ $hero-subtitle-color: #bdc3c7;
             min-width: 100px;
         }
     }
+    .fb-like {
+        vertical-align: top;
+    }
 }
 
 
